# rustyroll

./: .gitignore  Cargo.toml  README.md  options.json  options.unix.json  subtitle_header_mod.ass
examples/: batch_download.rs  us_login.rs  weekly_download.rs
src/: crunchyroll.rs  downloader.rs  lib.rs  main.rs  models.rs  test.json
