[package]
name = "rustyroll"
version = "0.1.4"
authors = ["Marek Veselý <veselym@spstrutnov.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
m3u8-rs = "1.0"
libaes = "0.6.1"
futures = "0.3"
bytes = "1.0.1"
lava_torrent = "0.5.0"

[[example]]
name = "batch_download"
path = "examples/batch_download.rs"

[[example]]
name = "us_login"
path = "examples/us_login.rs"
